WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
308467
REGRESSION(
305794@main
): Unconditional CheckedPtr crash when loading any Reddit post with VoiceOver active
https://bugs.webkit.org/show_bug.cgi?id=308467
Summary
REGRESSION(305794@main): Unconditional CheckedPtr crash when loading any Redd...
Tyler Wilcock
Reported
2026-02-23 08:11:51 PST
...
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2026-02-23 08:11:56 PST
<
rdar://problem/170985963
>
Tyler Wilcock
Comment 2
2026-02-23 09:00:27 PST
Pull request:
https://github.com/WebKit/WebKit/pull/59243
EWS
Comment 3
2026-02-24 18:56:37 PST
Committed
308173@main
(54845b1b8742): <
https://commits.webkit.org/308173@main
> Reviewed commits have been landed. Closing PR #59243 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug